--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ theme: Vateral # landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/sscfan/sscfan.github.io.git
+  repo: https://github.com/sscfan/sscfan.github.io
   branch: master
   message: 我的博客
 #头像
